2008-08-13 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf.c: foomatic-rip inserted the -sOutputFile GhostScript command
	  line argument at the wrong position when printing a PDF file (not from
	  stdin), which led GhostScript to crash

2008-08-12 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Use FoomaticRIPCommandLinePDF if it is available. Don't
	  use it if at least one option wants to insert PostScript code
	* pdf.c: Only create a temporary file if there actually are page
	  overrides, not if printing the whole document
	* postscript.c: Fixed bug #142, custom input value which was wrongly
	  set by pstops was not set to the correct value by foomatic-rip

2008-08-05 Lars Uebernickel <larsuebernickel@gmx.de>
	* renderer.c: fixed bug #146, merging of JCL options omitted some
	  options.
	* options.c: Fixed bug #151, crash when default value of an option was
	  set from a composite option.

2008-07-30 Lars Uebernickel <larsuebernickel@gmx.de>
	* *: Added support for the *FoomaticRIPCommandLinePDF keyword. It will
	  be used for PDF input. If it is missing, *FoomaticRIPCommandLine
	  will be used _only_ if it calls GhostScript, otherwise the Job is
	  converted to PostScript.
	* pdf.c: Pagerange-specific options work correctly now. If the command
	  line calls GhostScript, the -d(First|Last)Page parameters are used.
	  Otherwise, the PDF is split with GhostScript and fed to the command
	  line afterwards.

2008-06-22 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Allow float values on *OrderDependency settings. This is
	valid according to the PPD spec, and is used by some HP PPDs.

2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Allow choices starting with "From". Even if they do not
	  point to a valid composite option.
	* renderer.c: Parse more complex command lines correctly when looking
	  for the "gs" executable

2008-06-17 Lars Uebernickel <larsuebernickel@gmx.de>